--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 .row {
-    display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
 }
 h1 {
     font-size: 35px;
@@ -15,7 +15,6 @@ h1 {
     height: 100%;
     width: 60%;
 }
-
 #instructions {
     font-size: 20px;
     background-color:tan;
@@ -25,7 +24,6 @@ h1 {
     margin: auto, 0;
     padding: 50px;
 }
-
 #random-number {
     font-size: 28px;
     background-color:green;
@@ -43,15 +41,13 @@ h1 {
     font-size: 24px;
     width: 60%;
 }
-
-.jewels {
+.img {
     display: block;
     height: auto;
     max-width: 50%;
     padding: 10px;
     float: left;
 }
-
 #score-text {
     font-size: 20px;
     color: white;
